@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam monochrome true

class User {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +email: EmailStr <<unique>>
  +first_name: string?
  +last_name: string?
  +hashed_password: string?
  +provider: string?
  +picture: string?
  +role: UserRole
  +team_uuid: UUID?
  +is_active: bool
  +is_verified: bool
  +is_superuser: bool
  +created_at: datetime
  +last_login_at: datetime?
}

class Team {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +name: string <<unique>>
  +description: string?
  +owner_user_uuid: UUID?
  +created_at: datetime
}

class Dataset {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +name: string <<indexed>>
  +description: string?
  +task: TaskType
  +visibility: Visibility
  +team_id: ObjectId? <<indexed>>
  +created_by_user_id: ObjectId? <<indexed>>
  +created_at: datetime
}

class DatasetVersion {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +dataset_id: ObjectId <<indexed>>
  +version: string
  +dataset_yaml_raw: string?
  +version_yaml_raw: string?
  +characteristics_yaml_raw: string?
  +n_users: int?
  +n_items: int?
  +n_interactions: int?
  +density: float?
  +gini_user: float?
  +gini_item: float?
  +status: VersionStatus
  +created_at: datetime
}

class Pipeline {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +dataset_version_id: ObjectId <<indexed>>
  +code: string
  +yaml_raw: string?
  +blocks: object[]
  +status: PipelineStatus
  +created_at: datetime
}

class Source {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +dataset_version_id: ObjectId <<indexed>>
  +name: string
  +source_type: string
  +archive: string?
  +downloadable: bool
  +url: string?
  +checksum: string?
  +checksum_algorithm: string?
  +filename: string?
  +inner_paths: object?
  +created_at: datetime
}

class Resource {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +dataset_version_id: ObjectId <<indexed>>
  +source_id: ObjectId? <<indexed>>
  +name: string
  +filename: string?
  +type: string
  +format: string?
  +required: bool
  +about: string?
  +schema_definition: object?
  +created_at: datetime
}

class MLModel {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +name: string <<unique>>
  +family: string?
  +paper_url: string?
  +implementation: string?
  +hyperparams: object?
  +created_by_user_id: ObjectId? <<indexed>>
  +created_at: datetime
}

class Experiment {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +pipeline_id: ObjectId? <<indexed>>
  +dataset_version_id: ObjectId <<indexed>>
  +dataset_id: ObjectId? <<indexed>>
  +model_id: ObjectId <<indexed>>
  +submitted_by_user_id: ObjectId <<indexed>>
  +team_id: ObjectId? <<indexed>>
  +run_name: string?
  +status: Status
  +training_config: object?
  +seed: int?
  +notes: string?
  +code: CodeInfo?
  +artifacts: Artifacts?
  +created_at: datetime
  +finished_at: datetime?
}

class MetricImportJob {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +experiment_id: ObjectId <<indexed>>
  +uploaded_by_user_id: ObjectId <<indexed>>
  +status: ImportStatus
  +csv_filename: string
  +csv_storage_path: string
  +error_message: string?
  +created_at: datetime
  +started_at: datetime?
  +finished_at: datetime?
}

class ExperimentMetric {
  +_id: ObjectId
  +uuid: UUID <<unique>>
  +experiment_id: ObjectId <<indexed>>
  +dataset_id: ObjectId <<indexed>>
  +dataset_version_id: ObjectId <<indexed>>
  +pipeline_id: ObjectId? <<indexed>>
  +model_id: ObjectId <<indexed>>
  +submitted_by_user_id: ObjectId? <<indexed>>
  +team_id: ObjectId? <<indexed>>
  +split: Split
  +metric: string <<indexed>>
  +k: int?
  +value: float
  +direction: Direction
  +computed_at: datetime
}

User "1" -- "0..*" Dataset : creates >
User "1" -- "0..*" MLModel : creates >
User "1" -- "0..*" Experiment : submits >
User "1" -- "0..*" MetricImportJob : uploads >
User "0..*" -- "0..1" Team : belongs to >

Team "1" -- "0..*" Dataset : owns/private >
Team "1" -- "0..*" Experiment : owns >

Dataset "1" -- "1..*" DatasetVersion : has >
DatasetVersion "1" -- "0..*" Source : declares >
DatasetVersion "1" -- "0..*" Resource : exposes >
DatasetVersion "1" -- "0..*" Pipeline : defines >

Pipeline "1" -- "0..*" Experiment : runs >
MLModel "1" -- "0..*" Experiment : runs >
Experiment "1" -- "0..*" MetricImportJob : imports >
Experiment "1" -- "0..*" ExperimentMetric : produces >

Source "1" -- "0..*" Resource : provides >

note bottom of ExperimentMetric
Contains only experiment performance metrics
(e.g. ndcg, recall, rmse).
Dataset characteristics live in DatasetVersion.
end note
@enduml
